--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@popperjs/core": "2.11.8",
+    "@types/bootstrap": "5.2.6",
     "bootstrap": "5.3.0",
     "vue": "^3.2.47"
   },
