--- a/package.json
+++ b/package.json
@@ -10,8 +10,11 @@
   },
   "dependencies": {
     "@popperjs/core": "2.11.8",
+    "@shopware-pwa/shopware-6-client": "1.6.1",
     "@types/bootstrap": "5.2.6",
+    "@types/lodash-es": "4.17.7",
     "bootstrap": "5.3.0",
+    "lodash-es": "4.17.21",
     "vue": "^3.2.47"
   },
   "devDependencies": {
