--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,3 @@
 
-VITE_SHOPWARE_ENDPOINT==http://localhost:8000/store-api/
+VITE_SHOPWARE_ENDPOINT==http://localhost:8000
 VITE_SHOPWARE_ACCESS_TOKEN==youraccesstoken
